初始化项目

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/FreePuzzle
+/FreePuzzle/obj
+/FreePuzzle/bin/Debug/netcoreapp3.1
+/FreePuzzle/.vs/FreePuzzle
