--- a/FreePuzzle/FreePuzzle.csproj
+++ b/FreePuzzle/FreePuzzle.csproj
@@ -1,7 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+	  <PackageId>FreePuzzle</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>stone_lewis</Authors>
+	  <Company>60points</Company>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
-
 </Project>
