--- a/FreePuzzle.Service/FreePuzzle.Service.csproj
+++ b/FreePuzzle.Service/FreePuzzle.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,6 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+	  <PackageReference Include="freesql" Version="2.0.102" />
+	  <PackageReference Include="FreeSql.Repository" Version="2.0.102" />
+	  <PackageReference Include="log4net" Version="2.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="log4netServer.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
