--- a/FreePuzzle.UnitTest/FreePuzzle.UnitTest.csproj
+++ b/FreePuzzle.UnitTest/FreePuzzle.UnitTest.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="autofac" Version="6.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.console" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
