--- a/FreePuzzle.Api/FreePuzzle.Api.csproj
+++ b/FreePuzzle.Api/FreePuzzle.Api.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
