--- a/FreePuzzle.Service/FreePuzzle.Service.csproj
+++ b/FreePuzzle.Service/FreePuzzle.Service.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FreePuzzle\FreePuzzle.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="log4netServer.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
