修复路径错误

--- a/FreePuzzle.Api/Properties/launchSettings.json
+++ b/FreePuzzle.Api/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "FreePuzzlie.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "home",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
