修复镜像错误

--- a/FreePuzzle.Api/Dockerfile
+++ b/FreePuzzle.Api/Dockerfile
@@ -4,17 +4,16 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
-WORKDIR /src
-COPY ["FreePuzzle.Api/FreePuzzle.Api.csproj", "FreePuzzle.Api/"]
-RUN dotnet restore "FreePuzzle.Api/FreePuzzle.Api.csproj"
-COPY . .
-WORKDIR "/src/FreePuzzle.Api"
+COPY . /app
+
+WORKDIR "/app"
+#WORKDIR "/src/HmaServer"
 RUN dotnet build "FreePuzzle.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "FreePuzzle.Api.csproj" -c Release -o /app/publish
+
 
 FROM base AS final
 WORKDIR /app
