变更docker 镜像操作系统

--- a/FreePuzzle.Api/FreePuzzle.Api.csproj
+++ b/FreePuzzle.Api/FreePuzzle.Api.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>c08479ea-341f-4db8-b259-3a503554a723</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
