还原成linux 镜像

--- a/FreePuzzle.Api/FreePuzzle.Api.csproj
+++ b/FreePuzzle.Api/FreePuzzle.Api.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UserSecretsId>c08479ea-341f-4db8-b259-3a503554a723</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	<UserSecretsId>e0517806-dd8f-422f-a79a-269415a9c793</UserSecretsId>
+	<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
