完善基础信息~

--- a/FreePuzzle.UnitTest/FreePuzzle.UnitTest.csproj
+++ b/FreePuzzle.UnitTest/FreePuzzle.UnitTest.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FreePuzzle.Service\FreePuzzle.Service.csproj" />
     <ProjectReference Include="..\FreePuzzle\FreePuzzle.csproj" />
   </ItemGroup>
 
