--- a/FreePuzzle.Service/FreePuzzle.Service.csproj
+++ b/FreePuzzle.Service/FreePuzzle.Service.csproj
@@ -5,13 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="autofac" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
-	  <PackageReference Include="freesql" Version="2.0.102" />
-	  <PackageReference Include="FreeSql.Repository" Version="2.0.102" />
+	  <PackageReference Include="FreeSql" Version="2.0.105" />
+	  <PackageReference Include="FreeSql.Provider.MySql" Version="2.0.105" />
+	  <PackageReference Include="FreeSql.Repository" Version="2.0.105" />
 	  <PackageReference Include="log4net" Version="2.0.11" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FreePuzzle.Models\FreePuzzle.Models.csproj" />
     <ProjectReference Include="..\FreePuzzle\FreePuzzle.csproj" />
   </ItemGroup>
 
