--- a/FreePuzzle.Api/Dockerfile
+++ b/FreePuzzle.Api/Dockerfile
@@ -6,6 +6,7 @@ EXPOSE 80
 EXPOSE 443
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 COPY . /app
+COPY ../FreePuzzle.Service/FreePuzzle.Service.csproj /FreePuzzle.Service.csproj
 
 WORKDIR "/app"
 RUN dotnet build "FreePuzzle.Api.csproj" -c Release -o /app/build
