--- a/FreePuzzle.Service/FreePuzzle.Service.csproj
+++ b/FreePuzzle.Service/FreePuzzle.Service.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="autofac" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
 	  <PackageReference Include="FreeSql" Version="2.0.105" />
+	  <PackageReference Include="FreeSql.Extensions.Linq" Version="2.0.105" />
 	  <PackageReference Include="FreeSql.Provider.MySqlConnector" Version="2.0.105" />
 	  <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.0.105" />
 	  <PackageReference Include="FreeSql.Repository" Version="2.0.105" />
