待补充计算逻辑

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ bin
 /FreePuzzle/.vs/FreePuzzle/DesignTimeBuild
 /FreePuzzle.Api/.vs/FreePuzzle/DesignTimeBuild
 /使用阿里云镜像.bat
+/FreePuzzle.UI/favicon.ico
